--- a/clone.html
+++ b/clone.html
@@ -11,7 +11,7 @@
     <a href="index.html"><button>HEM</button></a>  <a href="branch.html"><button>Branches</button></a>  <a href="repo.html"><button>Repository</button></a> <a href="clone.html"><button>Clone</button></a> 
 
     <div id="total">
-        <img src="/img/PngItem_1195638.png" alt="">
+        <img src="./img/PngItem_1195638.png" alt="">
 
 
     <p>Git clone är ett Git kommandoradsverktyg som används för att rikta in sig på ett befintligt arkiv och skapa en klon, eller kopia av målförvaret. ... Klona ett lokalt eller fjärrlager. Kloning av ett rent 
