--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="index.html"><button>HEM</button></a>  <a href="branch.html"><button>Branches</button></a>  <a href="repo.html"><button>Repository</button></a> <a href="clone.html"><button>Clone</button></a> 
 
     <div id="total">
-        <img src="/img/PngItem_1195638.png" alt="">
+        <img src="./img/PngItem_1195638.png" alt="">
 
 
     <p>Mitt namn är Sohny Boukhezzar och jag är en man på 31 år. Gift och två barn bor i ett radhus i oxie.
