--- a/branch.html
+++ b/branch.html
@@ -12,7 +12,7 @@
     <a href="index.html"><button>HEM</button></a>  <a href="branch.html"><button>Branches</button></a>  <a href="repo.html"><button>Repository</button></a> <a href="clone.html"><button>Clone</button></a> 
 
     <div id="total">
-        <img src="/img/PngItem_1195638.png" alt="">
+        <img src="./img/PngItem_1195638.png" alt="">
 
 
     <p>Branch/Branching - Vi kommer att använda "branching" eller förgreningar i vårt repro för att undvika att ändra i projektets “huvudgren”. Detta är extra viktigt då man är flera personer som samarbetar i samma repro då man enklare kan jobba utan att skriva över varandras filer/kod
