--- a/repo.html
+++ b/repo.html
@@ -11,7 +11,7 @@
     <a href="index.html"><button>HEM</button></a>  <a href="branch.html"><button>Branches</button></a>  <a href="repo.html"><button>Repository</button></a> <a href="clone.html"><button>Clone</button></a> 
 
     <div id="total">
-        <img src="/img/PngItem_1195638.png" alt="">
+        <img src="./img/PngItem_1195638.png" alt="">
 
 
     <p>Repositorie/Repository - Kallas ofta förkortat för "repo" och är oftast ett projekt. Vi kan likna ett repositorie med en mapp/katalog innehållandes filer och undermappar som kan versionshanteras. Du skapar oftast ett repositorie per kurs eller ett repositorie per applikation.
