--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html"><button>HEM</button></a>  <a href="branch.html"><button>Branches</button></a>  <a href="repo.html"><button>Repository</button></a> <a href="clone.html"><button>Clone</button></a> 
+    <a href="index.html"><button>Commit</button></a><a href="commit.html"><button>Push</button></a> <a href="push.html"><button>Pull</button></a> <a href="pull.html"><button>Merge</button></a><a href="merge.html"><button>Merge</button></a> <a href="branch.html"><button>Branches</button></a>  <a href="repo.html"><button>Repository</button></a> <a href="clone.html"><button>Clone</button></a> 
+
 
     <div id="total">
         <img src="./img/PngItem_1195638.png" alt="">
@@ -20,6 +21,7 @@
         </p>
         </div>
 
-    
+        <a href="https://docs.github.com/en/get-started/quickstart/github-glossary">GLOOSSY</a>
+
 </body>
 </html>
