--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html"><button>Commit</button></a><a href="commit.html"><button>Push</button></a> <a href="push.html"><button>Pull</button></a> <a href="pull.html"><button>Merge</button></a><a href="merge.html"><button>Merge</button></a> <a href="branch.html"><button>Branches</button></a>  <a href="repo.html"><button>Repository</button></a> <a href="clone.html"><button>Clone</button></a> 
+    <a href="index.html"><button>Hem</button></a><a href="commit.html"><button>Commit</button></a> <a href="push.html"><button>push</button></a> <a href="pull.html"><button>pull</button></a><a href="merge.html"><button>Merge</button></a> <a href="branch.html"><button>Branches</button></a>  <a href="repo.html"><button>Repository</button></a> <a href="clone.html"><button>Clone</button></a> 
 
 
     <div id="total">
