--- a/branch.html
+++ b/branch.html
@@ -18,6 +18,10 @@
 
     <p>Branch/Branching - Vi kommer att använda "branching" eller förgreningar i vårt repro för att undvika att ändra i projektets “huvudgren”. Detta är extra viktigt då man är flera personer som samarbetar i samma repro då man enklare kan jobba utan att skriva över varandras filer/kod
         </p>
+        <p>Git clone är ett Git kommandoradsverktyg som används för att rikta in sig på ett befintligt arkiv och skapa en klon, eller kopia av målförvaret. ... Klona ett lokalt eller fjärrlager. Kloning av ett rent 
+        </p>
+        <p>Repositorie/Repository - Kallas ofta förkortat för "repo" och är oftast ett projekt. Vi kan likna ett repositorie med en mapp/katalog innehållandes filer och undermappar som kan versionshanteras. Du skapar oftast ett repositorie per kurs eller ett repositorie per applikation.
+
         </div>
 
         <a href="https://docs.github.com/en/get-started/quickstart/github-glossary">GLOOSSY</a>
