--- a/merge.html
+++ b/merge.html
@@ -15,6 +15,13 @@
 
     <p>Merge - Om ägaren av repositoriet tycker att dina ändringar är bra kan hon/han välja att baka in dessa i orginalkoden d.v.s. göra en "merge", en sammanslagning.
         </p>
+        <p>Pull request - Detta innebär att du har forkat ett projekt/repositorie och gjort förändringar i detta som du vill dela med dig av till orginalprojketet. Du kan då föreslå detta för repositorie-ägaren genom att göra en "pull request" som ägaren får godkänna.
+        </p>
+        
+    <p>Push - Att "push:a" innebär att man tar de "commit:ade" filerna och skickar/pushar upp på en central server. I Vårt fall kommer detta oftast vara GitHubs server.
+    </p>
+    <p>Commit - Att "commit:a" sina ändringar talar om att man nu har uppdaterat sina filer och sparar dessa i en ny version, en commit. Detta görs i lokalt på din dator.
+    </p>
         </div>
 
     <a href="https://docs.github.com/en/get-started/quickstart/github-glossary">GLOOSSY</a>
