Länk förändring och namn!

--- a/ovnning3.html
+++ b/ovnning3.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html"><button>Hem</button></a>   <a href="pull.html"> <button>pull</button></a><a href="merge.html"><button>Merge</button></a> <a href="branch.html"><button>Branch</button></a> 
+    <a href="index.html"><button>Hem</button></a>   <a href="ovnning3.html"> <button>pull</button></a><a href="ovning2.html"><button>Merge</button></a> <a href="ovning1.html"><button>Branch</button></a> 
 
     <div id="total">
         <img src="./img/PngItem_1195638.png" alt="">
