--- a/ovning1.html
+++ b/ovning1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <a href="index.html"><button>Hem</button></a>   <a href="pull.html"> <button>pull</button></a><a href="merge.html"><button>Merge</button></a> <a href="branch.html"><button>Branch</button></a> 
+    <a href="index.html"><button>Hem</button></a>   <a href="pull.html"> <button>pull</button></a><a href="merge.html"><button>Merge</button></a> <a href="ovning1.html"><button>Branch</button></a> 
 
     <div id="total">
         <img src="./img/PngItem_1195638.png" alt="">
