--- a/merge.html
+++ b/merge.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <a href="index.html"><button>Hem</button></a>   <a href="ovnning3.html"> <button>pull</button></a><a href="ovning2.html"><button>Merge</button></a> <a href="ovning1.html"><button>Branch</button></a> 
+    <div id="total">
         <img src="./img/PngItem_1195638.png" alt="">
 
 
@@ -20,7 +21,7 @@
     <p>Push - Att "push:a" innebär att man tar de "commit:ade" filerna och skickar/pushar upp på en central server. I Vårt fall kommer detta oftast vara GitHubs server.
     </p>
     <p>Commit - Att "commit:a" sina ändringar talar om att man nu har uppdaterat sina filer och sparar dessa i en ny version, en commit. Detta görs i lokalt på din dator.
-    </p>
+        </p>
         </div>
 
     <a href="https://docs.github.com/en/get-started/quickstart/github-glossary">GLOOSSY</a>
