--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html"><button>Hem</button></a>   <a href="ovnning3.html"> <button>pull</button></a><a href="ovning2.html"><button>Merge</button></a> <a href="ovning1.html"><button>Branch</button></a> 
+    <a href="index.html"><button>Hem</button></a>   <a href="ovnning3.html"> <button>övning3</button></a><a href="ovning2.html"><button>övning2</button></a> <a href="ovning1.html"><button>övning1</button></a> 
  
 
 
