--- a/ovnning3.html
+++ b/ovnning3.html
@@ -9,16 +9,25 @@
 </head>
 <body>
     <a href="index.html"><button>Hem</button></a>   <a href="ovnning3.html"> <button>övning3</button></a><a href="ovning2.html"><button>övning2</button></a> <a href="ovning1.html"><button>övning1</button></a> 
-
     <div id="total">
         <img src="./img/PngItem_1195638.png" alt="">
 
 
-    <p>Pull request - Detta innebär att du har forkat ett projekt/repositorie och gjort förändringar i detta som du vill dela med dig av till orginalprojketet. Du kan då föreslå detta för repositorie-ägaren genom att göra en "pull request" som ägaren får godkänna.
+    <p>HEAD är representation för den för närvarande checkade ut grenen av den senaste åtagandekoden.
         </p>
+        <p>Git revert-kommandot används för att ångra ändringar i ett arkivs commit-historik. 
+        </p>
+        
+    <p>För att granska är git reset ett kraftfullt kommando som används för att ångra lokala ändringar av tillståndet för en Git-repo.
+    </p>
+    <p>Ett iscensättande steg i git låter dig fortsätta att göra ändringar i arbetskatalogen, och när du bestämmer dig för att du vill interagera med versionskontroll låter det dig spela in ändringar i små commits
+        </p>
+
+        <p>Som anges i Git-dokumentationen: Arbetskatalogen är en enda utcheckning av en version av projektet. Detta betyder i huvudsak att om du checkar ut en filial (t.ex. master) och sitter på en viss commit (t.ex. HEAD), är din arbetskatalog "paraply"-termen för alla dina filer och mappar.</p>
+
+
         </div>
 
-        <a href="https://docs.github.com/en/get-started/quickstart/github-glossary">GLOOSSY</a>
-
+    <a href="https://docs.github.com/en/get-started/quickstart/github-glossary">GLOOSSY</a>
 </body>
 </html>
