--- a/ovnning3.html
+++ b/ovnning3.html
@@ -23,7 +23,7 @@
     <p>Ett iscensättande steg i git låter dig fortsätta att göra ändringar i arbetskatalogen, och när du bestämmer dig för att du vill interagera med versionskontroll låter det dig spela in ändringar i små commits
         </p>
 
-        <p>Som anges i Git-dokumentationen: Arbetskatalogen är en enda utcheckning av en version av projektet. Detta betyder i huvudsak att om du checkar ut en filial (t.ex. master) och sitter på en viss commit (t.ex. HEAD), är din arbetskatalog "paraply"-termen för alla dina filer och mappar.</p>
+        <p>Som anges i Git-dokumentationen: Arbetskatalogen är en enda utcheckning av en version av projektet. Detta betyder i huvudsak att om du checkar ut en branch (t.ex. master) och sitter på en viss commit (t.ex. HEAD), är din arbetskatalog "paraply"-termen för alla dina filer och mappar.</p>
 
 
         </div>
