--- a/ovnning3.html
+++ b/ovnning3.html
@@ -18,12 +18,12 @@
         <p>Git revert-kommandot används för att ångra ändringar i ett arkivs commit-historik. 
         </p>
         
-    <p>För att granska är git reset ett kraftfullt kommando som används för att ångra lokala ändringar av tillståndet för en Git-repo.
+    <p> Git reset är ett kraftfullt kommando som används för att ångra lokala ändringar av tillståndet för en Git-repo.
     </p>
-    <p>Ett iscensättande steg i git låter dig fortsätta att göra ändringar i arbetskatalogen, och när du bestämmer dig för att du vill interagera med versionskontroll låter det dig spela in ändringar i små commits
+    <p>Staging i git låter dig fortsätta att göra ändringar i arbetskatalogen, och när du bestämmer dig för att du vill interagera med versionskontroll låter det dig spela in ändringar i små commits
         </p>
 
-        <p>Som anges i Git-dokumentationen: Arbetskatalogen är en enda utcheckning av en version av projektet. Detta betyder i huvudsak att om du checkar ut en branch (t.ex. master) och sitter på en viss commit (t.ex. HEAD), är din arbetskatalog "paraply"-termen för alla dina filer och mappar.</p>
+        <p>Working Directory, Git-dokumentationen: Arbetskatalogen är en enda utcheckning av en version av projektet. Detta betyder i huvudsak att om du checkar ut en branch (t.ex. master) och sitter på en viss commit (t.ex. HEAD), är din arbetskatalog "paraply"-termen för alla dina filer och mappar.</p>
 
 
         </div>
