Changes font & Picture

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 
 
     <div id="total">
-        <img src="./img/PngItem_1195638.png" alt="">
+        <div id="total">
+            <div id="img">
+            <img src="./img/PngItem_1195638.png" alt="">
+            <img src="./img/PngItem_1195638.png" alt="">
+            <img src="./img/PngItem_1195638.png" alt="">
+            <img src="./img/PngItem_1195638.png" alt="">
+        </div>
 
 
     <p>Mitt namn är Sohny Boukhezzar och jag är en man på 31 år. Gift och två barn bor i ett radhus i oxie.
