--- a/ovning2.html
+++ b/ovning2.html
@@ -10,8 +10,8 @@
 <body>
     <a href="index.html"><button>Hem</button></a>   <a href="ovnning3.html"> <button>övning3</button></a><a href="ovning2.html"><button>övning2</button></a> <a href="ovning1.html"><button>övning1</button></a> 
     <div id="total">
-        <img src="./img/PngItem_1195638.png" alt="">
-
+        <div id="total">
+       
 
     <p>Merge - Om ägaren av repositoriet tycker att dina ändringar är bra kan hon/han välja att baka in dessa i orginalkoden d.v.s. göra en "merge", en sammanslagning.
         </p>
