--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,29 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <a href="index.html"><button>Hem</button></a>   <a href="ovnning3.html"> <button>övning3</button></a><a href="ovning2.html"><button>övning2</button></a> <a href="ovning1.html"><button>övning1</button></a> 
- 
+    <a href="index.html"><button>Hem</button></a> <a href="ovnning3.html"> <button>övning3</button></a><a
+        href="ovning2.html"><button>övning2</button></a> <a href="ovning1.html"><button>övning1</button></a>
+        <a href="branchfork.html"><button> Branch & fork</button></a>
+
 
 
     <div id="total">
         <img src="./img/PngItem_1195638.png" alt="">
 
 
-    <p>Mitt namn är Sohny Boukhezzar och jag är en man på 31 år. Gift och två barn bor i ett radhus i oxie.
-        Jag är socialt utåtriktad med en positiv inställning som ser lösningar. Att skapa en god kontakt till andra är ett engagemang som jag brinner för. Jag har erfarenheter av skolverksamheten då jag är anställd i Malmö Stad på en grundskola.
-        Jag är en energisk och social person som gillar att vara i rörelse och brinner för att lära mig och bemästra nya saker. 
+        <p>Mitt namn är Sohny Boukhezzar och jag är en man på 31 år. Gift och två barn bor i ett radhus i oxie.
+            Jag är socialt utåtriktad med en positiv inställning som ser lösningar. Att skapa en god kontakt till andra
+            är ett engagemang som jag brinner för. Jag har erfarenheter av skolverksamheten då jag är anställd i Malmö
+            Stad på en grundskola.
+            Jag är en energisk och social person som gillar att vara i rörelse och brinner för att lära mig och bemästra
+            nya saker.
         </p>
-        </div>
+    </div>
 
-        <a href="https://docs.github.com/en/get-started/quickstart/github-glossary">GLOOSSY</a>
+    <a href="https://docs.github.com/en/get-started/quickstart/github-glossary">GLOOSSY</a>
 
 </body>
+
 </html>
