--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="./img/PngItem_1195638.png" alt="">
 
         <h1>Våra namn är:</h1>
-        <p>Sonny Boukhezzar, August Dahlström, Ediz Mehmet och Niklas Grimberg</p>
+        <p>Sohny Boukhezzar, August Dahlström, Ediz Mehmet och Niklas Grimberg</p>
     <p>Mitt namn är Sohny Boukhezzar och jag är en man på 31 år. Gift och två barn bor i ett radhus i oxie.
         Jag är socialt utåtriktad med en positiv inställning som ser lösningar. Att skapa en god kontakt till andra är ett engagemang som jag brinner för. Jag har erfarenheter av skolverksamheten då jag är anställd i Malmö Stad på en grundskola.
         Jag är en energisk och social person som gillar att vara i rörelse och brinner för att lära mig och bemästra nya saker. 
