Update names again
bug fix, suii

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
 
     <div id="total">
+        <section>
         <img src="./img/PngItem_1195638.png" alt="">
+        <img src="./img/PngItem_1195638.png" alt="">
+        <img src="./img/PngItem_1195638.png" alt="">
+        <img src="./img/PngItem_1195638.png" alt="">
+    </section>
 
         <h1>Våra namn är:</h1>
         <p>Sohny Boukhezzar, August Dahlström, Ediz Mehmet och Niklas Grimberg</p>
