Update name (presentation)

--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
         <img src="./img/PngItem_1195638.png" alt="">
         <img src="./img/PngItem_1195638.png" alt="">
     </section>
+    
+     <h1>Sohny Boukhezzar, August Dahlström, Niklas Grimberg, Ediz Mehmet</h1>
 
-     <h1>Sohny, August, Niklas, Ediz</h1>   
-
-
-
-
+     <h1>Sohny:</h1>
+     <p>Blivande Front-end utvecklare.</p>
+     <h1>August:</h1>
+     <p>Blivande Front-end utvecklare.</p>
+     <h1>Niklas:</h1>
+     <p>Blivande Front-end utvecklare.</p>
+     <h1>Ediz:</h1>
+     <p>Blivande Front-end utvecklare och spiderman entusiast.</p>
        
     </div>
 
