--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 
 <body>
-    <a href="index.html"><button>Hem</button></a> <a href="ovnning3.html"> <button>övning3</button></a><a
-        href="ovning2.html"><button>övning2</button></a> <a href="ovning1.html"><button>övning1</button></a>
-        <a href="branchfork.html"><button> Branch & fork</button></a>
-
+    <a href="index.html"><button>Hem</button></a> 
+    <a href="terminology.html"><button>Terminology</button></a>
 
 
     <div id="total">
