--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <a href="index.html"><button>Hem</button></a> 
     <a href="terminology.html"><button>Terminology</button></a>
+    <a href="mark.html"><button>Markdown</button></a>
 
 
     <div id="total">
