--- a/terminology.html
+++ b/terminology.html
@@ -12,6 +12,9 @@
 <body>
     <a href="index.html"><button>Hem</button></a>
     <a href="terminology.html"><button>Terminology</button></a>
+    <a href="mark.html"><button>Markdown</button></a>
+
+    
     <div id="total">
         <h1>Terminology</h1>
 
