--- a/mark.html
+++ b/mark.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <a href="index.html"><button>Hem</button></a> 
+    <a href="om.html"><button>Hem</button></a> 
     <a href="terminology.html"><button>Terminology</button></a>
     <a href="mark.html"><button>Markdown</button></a>
 
