--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="om.html"><button>Hem</button></a> 
+    <a href="terminology.html"><button>Terminology</button></a>
+    <a href="mark.html"><button>Markdown</button></a>
+
     <div class="background background0"></div>
     <div class="background background1"></div>
     <div class="background background2"></div>
