--- a/mark.html
+++ b/mark.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <a href="index.html"><button>Hem</button></a> 
     <a href="om.html"><button>Hem</button></a> 
     <a href="terminology.html"><button>Terminology</button></a>
     <a href="mark.html"><button>Markdown</button></a>
