Welcome/New Startsida

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="om.html"><button>Hem</button></a> 
-    <a href="terminology.html"><button>Terminology</button></a>
-    <a href="mark.html"><button>Markdown</button></a>
+   
 
     <div class="background background0"></div>
     <div class="background background1"></div>
@@ -137,7 +135,12 @@
     </div>
 
 
-        </div>
+     <div id="buttonnew"> 
+        <a href="start.html"><button>Hem</button></a> 
+
+        <a href="om.html"><button>Hem</button></a> 
+        <a href="terminology.html"><button>Terminology</button></a>
+        <a href="mark.html"><button>Markdown</button></a></div>
 
    
 </body>
