--- a/start.html
+++ b/start.html
@@ -10,6 +10,7 @@
 <body>
     <a href="start.html"><button>Hem</button></a> 
     <a href="om.html"><button>Om</button></a> 
+
     <a href="terminology.html"><button>Terminology</button></a>
     <a href="mark.html"><button>Markdown</button></a>
 
@@ -19,8 +20,8 @@
    
         
 
-<H2>Markdown</H2>
-   <p>Markdown är ett märkspråk för ren text som sedan kan konverteras till många olika format. Syftet med markdown är att man enkelt ska kunna läsa och skriva läsbar ren text, men med möjligheten att sedan kunna konvertera texten till strukturerad, rik text.</p>
+<H2>WELCOME</H2>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis impedit a numquam accusamus quos iure est, rem, ipsam, omnis at error excepturi? Dolorem cupiditate vero sit cum nobis qui labore.</p>
 
         </div>
 
