--- a/om.html
+++ b/om.html
@@ -10,9 +10,8 @@
 </head>
 
 <body>
-    <a href="index.html"><button>Hem</button></a> 
-
-    <a href="om.html"><button>Hem</button></a> 
+    <a href="start.html"><button>Hem</button></a> 
+    <a href="om.html"><button>Om</button></a> 
     <a href="terminology.html"><button>Terminology</button></a>
     <a href="mark.html"><button>Markdown</button></a>
 
