--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
      <div id="buttonnew"> 
         <a href="start.html"><button>Hem</button></a> 
 
-        <a href="om.html"><button>Hem</button></a> 
+        <a href="om.html"><button>Om</button></a> 
         <a href="terminology.html"><button>Terminology</button></a>
         <a href="mark.html"><button>Markdown</button></a></div>
 
