--- a/sohny.html
+++ b/sohny.html
@@ -23,18 +23,17 @@
         <div class="card">
           <div class="half half-left">
             <div class="img-container">
-              <img src="https://images.unsplash.com/photo-1481578279695-5864d6d6ff2a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7cafa2bd02d15824d147667f8e72b090&auto=format&fit=crop&w=2134&q=80" alt="">
+              <img src="img/PngItem_1195638.png" alt="">
             </div>
           </div>
           <div class="half half-right">
-            <a href="" class="online">online</a>
             <h2 class="name">Sohny Boukhezzar</h2>
-            <p>(Programmer, Model)</p>
+            <p class="member"> Model)</p>
             <h3 class="bio">Bio</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ligula nisl penatibus purus, habitasse varius sociis cras malesuada lacus bibendum montes rhoncus et primis non, odio augue potenti hendrerit litora eros vulputate fames dui cursus. Tincidunt et litora ligula dictumst rutrum class viverra vestibulum, maecenas metus leo facilisis a lobortis erat hendrerit, aptent nibh inceptos cras ornare at blandit. Orci commodo facilisi facilisis nisl et per duis dictumst pretium nascetur dui tempor.</p>
+            <p class="member"> Lorem ipsum dolor sit amet consectetur adipiscing elit ligula nisl penatibus purus, habitasse varius sociis cras malesuada lacus bibendum montes rhoncus et primis non, odio augue potenti hendrerit litora eros vulputate fames dui cursus. Tincidunt et litora ligula dictumst rutrum class viverra vestibulum, maecenas metus leo facilisis a lobortis erat hendrerit, aptent nibh inceptos cras ornare at blandit. Orci commodo facilisi facilisis nisl et per duis dictumst pretium nascetur dui tempor.</p>
             <h3 class="location">Location</h3>
-            <p>Bucharest, Romania</p>
-            <button>Message</button>
+            <p class="member"> Malmö, Sweden</p>
+           
           </div>
           <div class="triangle">
             <ul>
@@ -45,7 +44,7 @@
               <li><a href="#" class="fa fa-instagram"></a></li>
               <li><a href="#" class="fa fa-snapchat-ghost"></a></li>
             </ul>
-            <span>Member Since 2015</span>
+            <span>Front-end developer</span>
           </div>
           <a href="#" class="fa fa-plus"></a>
         </div>
