--- a/om.html
+++ b/om.html
@@ -18,17 +18,12 @@
 
     <div id="total">
 
-        <section>
-        <img src="./img/PngItem_1195638.png" alt="">
-        <img src="./img/PngItem_1195638.png" alt="">
-        <img src="./img/PngItem_1195638.png" alt="">
-        <img src="./img/PngItem_1195638.png" alt="">
-    </section>
+     
     
-     <h1>Sohny Boukhezzar, August Dahlström, Niklas Grimberg, Ediz Mehmet</h1>
 
-     <h1>Sohny:</h1>
-     <p>Blivande Front-end utvecklare.</p>
+<a href="sohny.html">     <h1>Sohny:</h1>
+     <p>Blivande Front-end utvecklare.</p></a>
+
      <h1>August:</h1>
      <p>Blivande Front-end utvecklare.</p>
      <h1>Niklas:</h1>
