--- a/sohny.html
+++ b/sohny.html
@@ -12,7 +12,7 @@
 <body>
     <a href="index.html"><button>Hem</button></a> 
 
-    <a href="om.html"><button>Hem</button></a> 
+    <a href="om.html"><button>Om</button></a> 
     <a href="terminology.html"><button>Terminology</button></a>
     <a href="mark.html"><button>Markdown</button></a>
 
