--- a/ediz.html
+++ b/ediz.html
@@ -30,7 +30,7 @@
             <h2 class="name">Ediz Mehmet</h2>
             <p class="member"> Future Front-end developer</p>
             <h3 class="bio">Biografi</h3>
-            <p class="member"> Lorem ipsum dolor sit amet consectetur adipiscing elit ligula nisl penatibus purus, habitasse varius sociis cras malesuada lacus bibendum montes rhoncus et primis non, odio augue potenti hendrerit litora eros vulputate fames dui cursus. Tincidunt et litora ligula dictumst rutrum class viverra vestibulum, maecenas metus leo facilisis a lobortis erat hendrerit, aptent nibh inceptos cras ornare at blandit. Orci commodo facilisi facilisis nisl et per duis dictumst pretium nascetur dui tempor.</p>
+            <p class="member"> Mitt namn är Ediz och jag är en 25 årig front end developer student. Mina största intressen är gaming och detta är något jag har haft som intresse sen jag var liten. Jag är även ett fan av Kanye West, då jag tycker han är en bra artist! Läs mer om Kanye West <a href="https://sv.wikipedia.org/wiki/Kanye_West">här!</a></p>
             <h3 class="location">Område</h3>
             <p class="member"> Malmö, Sweden</p>
            
