change bio on August

--- a/august.html
+++ b/august.html
@@ -30,7 +30,7 @@
             <h2 class="name">August Dahlström</h2>
             <p class="member"> Blivande Front-end utveklare</p>
             <h3 class="bio">Bio</h3>
-            <p class="member"> Lorem ipsum dolor sit amet consectetur adipiscing elit ligula nisl penatibus purus, habitasse varius sociis cras malesuada lacus bibendum montes rhoncus et primis non, odio augue potenti hendrerit litora eros vulputate fames dui cursus. Tincidunt et litora ligula dictumst rutrum class viverra vestibulum, maecenas metus leo facilisis a lobortis erat hendrerit, aptent nibh inceptos cras ornare at blandit. Orci commodo facilisi facilisis nisl et per duis dictumst pretium nascetur dui tempor.</p>
+            <p class="member"> Mitt namn är August Dahlström och jag studerar till front-end utvecklar på Gritacademy. Kommer från Malmö från början men är uppväxt i Ljunghusen som ligger 30 minuter utanför Malmö. Jag gillar att spela och har sedan ung ålder alltid suttit framför en dator, så det var bara en tidsfråga innan jag började koda. <a href="https://www.wikihow.com/Become-a-Legend">Mer info</a></p>
             <h3 class="location">Plats</h3>
             <p class="member"> Malmö, Sweden</p>
            
