--- a/ediz.html
+++ b/ediz.html
@@ -37,7 +37,7 @@
           </div>
           <div class="triangle">
         
-            <span>Front-end developer</span>
+            <span>Front-end developer!</span>
           </div>
           <a href="#" class="fa fa-plus"></a>
         </div>
