--- a/august.html
+++ b/august.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="index.html"><button>Hem</button></a> 
+    <a href="start.html"><button>Hem</button></a> 
 
     <a href="om.html"><button>Om</button></a> 
     <a href="terminology.html"><button>Terminology</button></a>
