--- a/sohny.html
+++ b/sohny.html
@@ -30,7 +30,11 @@
             <h2 class="name">Sohny Boukhezzar</h2>
             <p class="member"> Model)</p>
             <h3 class="bio">Bio</h3>
-            <p class="member"> Lorem ipsum dolor sit amet consectetur adipiscing elit ligula nisl penatibus purus, habitasse varius sociis cras malesuada lacus bibendum montes rhoncus et primis non, odio augue potenti hendrerit litora eros vulputate fames dui cursus. Tincidunt et litora ligula dictumst rutrum class viverra vestibulum, maecenas metus leo facilisis a lobortis erat hendrerit, aptent nibh inceptos cras ornare at blandit. Orci commodo facilisi facilisis nisl et per duis dictumst pretium nascetur dui tempor.</p>
+            <p class="member"> Vem är du? 
+              Mitt namn är Sohny Boukhezzar och jag är en man på snart 31 år. Gift och två barn bor i ett radhus i oxie.
+              På Grit har vi fått lära oss HTML & CSS dock hade jag redan läst det mesta av det på universitet så egentligen det jag lärt mig mest av är JavaScript.
+              <a href="www.youtube.com">TRYCK HÄR</a>
+             </p>
             <h3 class="location">Location</h3>
             <p class="member"> Malmö, Sweden</p>
            
