--- a/sohny.html
+++ b/sohny.html
@@ -30,7 +30,7 @@
             <h2 class="name">Sohny Boukhezzar</h2>
             <p class="member"> Model)</p>
             <h3 class="bio">Bio</h3>
-            <p class="member"> Vem är du? 
+            <p class="member"> 
               Mitt namn är Sohny Boukhezzar och jag är en man på snart 31 år. Gift och två barn bor i ett radhus i oxie.
               På Grit har vi fått lära oss HTML & CSS dock hade jag redan läst det mesta av det på universitet så egentligen det jag lärt mig mest av är JavaScript.
               <a href="www.youtube.com">TRYCK HÄR</a>
