--- a/sohny.html
+++ b/sohny.html
@@ -33,7 +33,7 @@
             <p class="member"> 
               Mitt namn är Sohny Boukhezzar och jag är en man på snart 31 år. Gift och två barn bor i ett radhus i oxie.
               På Grit har vi fått lära oss HTML & CSS dock hade jag redan läst det mesta av det på universitet så egentligen det jag lärt mig mest av är JavaScript.
-              <a href="https://www.w3schools.com" target="_blank">Visit W3Schools</a> 
+              <a href="https://www.w3schools.com" target="_blank">KIKA HÄR</a> 
              </p>
             <h3 class="location">Location</h3>
             <p class="member"> Malmö, Sweden</p>
