--- a/sohny.html
+++ b/sohny.html
@@ -35,7 +35,7 @@
               På Grit har vi fått lära oss HTML & CSS dock hade jag redan läst det mesta av det på universitet så egentligen det jag lärt mig mest av är JavaScript.
               <a href="https://www.w3schools.com" target="_blank">KIKA HÄR</a> 
              </p>
-            <h3 class="location">Location</h3>
+            <h3 class="location">Område</h3>
             <p class="member"> Malmö, Sweden</p>
            
           </div>
