--- a/sohny.html
+++ b/sohny.html
@@ -28,7 +28,7 @@
           </div>
           <div class="half half-right">
             <h2 class="name">Sohny Boukhezzar</h2>
-            <p class="member"> Model)</p>
+            <p class="member">  Blivande Front-end utveklare</p>
             <h3 class="bio">Bio</h3>
             <p class="member"> 
               Mitt namn är Sohny Boukhezzar och jag är en man på snart 31 år. Gift och två barn bor i ett radhus i oxie.
