--- a/om.html
+++ b/om.html
@@ -28,7 +28,10 @@
             <a class="omoss"  href="august.html">
                 <h1 class="omoss"> August:</h1>
             </a>
-            <h1 class="omoss"> Niklas:</h1>
+            
+            <a class="omoss"  href="niklas.html">
+                <h1 class="omoss"> Niklas:</h1>
+            </a>
 
             <a class="omoss" href="ediz.html">
                 <h1 class="omoss"> Ediz:</h1>
