--- a/august.html
+++ b/august.html
@@ -31,7 +31,7 @@
             <p class="member"> Blivande Front-end utveklare</p>
             <h3 class="bio">Bio</h3>
             <p class="member"> Mitt namn är August Dahlström och jag studerar till front-end utvecklar på Gritacademy. Kommer från Malmö från början men är uppväxt i Ljunghusen som ligger 30 minuter utanför Malmö. Jag gillar att spela och har sedan ung ålder alltid suttit framför en dator, så det var bara en tidsfråga innan jag började koda. <a href="https://www.wikihow.com/Become-a-Legend">Mer info</a></p>
-            <h3 class="location">Plats</h3>
+            <h3 class="location">Område</h3>
             <p class="member"> Malmö, Sweden</p>
            
           </div>
