--- a/ediz.html
+++ b/ediz.html
@@ -15,6 +15,8 @@
   <a href="om.html"><button>Om</button></a>
   <a href="terminology.html"><button>Terminology</button></a>
   <a href="mark.html"><button>Markdown</button></a>
+  <a href="teamarbete.html"><button>Lärdomar</button></a>
+
 
 
 
