--- a/index.html
+++ b/index.html
@@ -140,8 +140,11 @@
 
         <a href="om.html"><button>Om</button></a> 
         <a href="terminology.html"><button>Terminology</button></a>
-        <a href="mark.html"><button>Markdown</button></a></div>
+        <a href="mark.html"><button>Markdown</button></a>
         <a href="teamarbete.html"><button>Lärdomar</button></a>
+    
+    </div>
+        
 
 
    
