--- a/jobba.html
+++ b/jobba.html
@@ -14,17 +14,15 @@
     <a href="mark.html"><button>Markdown</button></a>
     <a href="teamarbete.html"><button>Lärdomar</button></a>
 
+
     
     <div id="total">
 
    
         
 
-<H2>Pull-request</H2>
-<a href="jobba.html"> <H2>Jobba i team</H2></a>
-<H2>Issues</H2>
-<H2>Github-desktop</H2>
-   
+<H2>Jobba i team</H2>
+   <p>Att jobba med programmering i team medför större komplexitet än att jobba själv. För att hantera komplexiteten behöver vi tänka aktivt på vårt bemötande, hur vi använder våra verktyg och vilka roller vi har i teamet. Till en början känns det mycket lättare att fokusera på sitt och jobba på sitt eget sätt. Tänk på att när projektet växer och får många rörliga delar krävs ett genomtänkt samarbete.</p>
 
         </div>
 
