github desktop lärdom

--- a/desktop.html
+++ b/desktop.html
@@ -14,17 +14,15 @@
     <a href="mark.html"><button>Markdown</button></a>
     <a href="teamarbete.html"><button>Lärdomar</button></a>
 
+
     
     <div id="total">
 
    
         
 
-<H2>Pull-request</H2>
-<a href="jobba.html"> <H2>Jobba i team</H2></a>
-<H2>Issues</H2>
-<a href="desktop.html"><H2>Github-desktop</H2></a>
-   
+<H2>Github-desktop</H2>
+   <p>Vi har lärt oss mycket under dagen och särskillt om hur Github desktop funkar. Hur man fetchar origin för att få ner det de andra i teamet har lagt till i parent repot, hur man commitar, kollar förändringar i filerna m.m. Det känns som att den siffran man sa i början av kursen om hur mycket man kan om detta har ökat väldigt mycket och att man faktist börjar få in hur det är att jobba i team.</p>
 
         </div>
 
