--- a/pullrequest.html
+++ b/pullrequest.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pull-request</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,21 +16,9 @@
     <a href="mark.html"><button>Markdown</button></a>
     <a href="teamarbete.html"><button>Lärdomar</button></a>
 
-
     <div id="total">
-
-
-
-
-        <a href="pullrequest.html">
-            <h2>Pull-request</h2>
-        </a>
-        <a href="jobba.html">
-            <H2>Jobba i team</H2>
-        </a>
-        <H2>Issues</H2>
-        <H2>Github-desktop</H2>
-
+        <h2>Pull-request</h2>
+        <p>En pull-begäran uppstår när en utvecklare ber om att ändringar som är anslutna till ett externt arkiv övervägs för inkludering i ett projekts huvudarkiv. Det är viktigt att notera att "pull-förfrågningar" är en arbetsflödesmetod och inte är en funktion i själva versionskontrollsystemet.</p>
 
     </div>
 
