--- a/Issues.html
+++ b/Issues.html
@@ -14,18 +14,15 @@
     <a href="mark.html"><button>Markdown</button></a>
     <a href="teamarbete.html"><button>Lärdomar</button></a>
 
+
     
     <div id="total">
 
    
         
 
-<H2>Pull-request</H2>
-<a href="jobba.html"> <H2>Jobba i team</H2></a>
-<a href="Issues.html"><H2>Issues</H2></a>
-<a href="desktop.html"><H2>Github-desktop</H2></a>
-   
-
+<H2>Issues</H2>
+   <p>  Felrapportering, förslag och feedback etc för ett GitHub-repo kan kommenteras i issues (finns i menyn för varje repo). Detta är mer än ett kommentarsfält, behöriga användare kan använda diverse funktioner för en strukturerad hantering av de uppgifter som planeras utifrån rapporter som kommer in i issues.</p>
         </div>
 
         <a href="https://docs.github.com/en/get-started/quickstart/github-glossary">GLOOSSY</a>
