--- a/terminology.html
+++ b/terminology.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-    <a href="index.html"><button>Hem</button></a>
+    <a href="start.html"><button>Hem</button></a>
     <a href="om.html"><button>Om</button></a>
     <a href="terminology.html"><button>Terminology</button></a>
     <a href="mark.html"><button>Markdown</button></a>
     <a href="teamarbete.html"><button>Lärdomar</button></a>
+    <a href="sponsors.html"><button>Sponsorer</button></a>
 
 
     
