--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         <a href="terminology.html"><button>Terminology</button></a>
         <a href="mark.html"><button>Markdown</button></a>
         <a href="teamarbete.html"><button>Lärdomar</button></a>
+        <a href="sponsors.html"><button>Sponsorer</button></a>
     
     </div>
         
