--- a/sponsors.html
+++ b/sponsors.html
@@ -25,10 +25,10 @@
 
         <h2>Våra sponsorer!</h2>
         <p>Vi är stolta att presentera vår senaste sponsor Phil Spencer, som är också känd som Xboxs CEO. Han kommer att sponsra oss med Xbox konsoler och även gaming datorer för att han tycker våra tjänster är riktigt bra!</p>
-        <img class="xbox" src="/img/phil.jpg" alt="phil spencer">
+        <img class="xbox" src="img/phil.jpg" alt="phil spencer">
 
         <p>Vår tidigare sponsor Ye, även känd som Kanye West sponsrar oss med skor!</p>
-        <img class="xbox" src="/img/kanye.jpg" alt="Kanye west">
+        <img class="xbox" src="img/kanye.jpg" alt="Kanye west">
         <p>Här är dom fantstiska skorna som vi blir sponsrade med:</p>
         <img class="xbox" src="img/yeezy.jpeg" alt="">
 
